// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stake reducer contractDUO 1`] = `
Object {
  "addresses": Array [
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
  ],
  "allowance": Array [
    1000,
    0,
  ],
  "contractDUO": Array [
    0,
    0,
  ],
  "duo": 1000,
  "oracleStake": Array [
    Object {},
    Object {},
  ],
  "states": Array [
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 0,
      "maxStakePerOracle": 0,
      "minStakeAmt": 0,
      "totalAwardsToDistribute": 0,
    },
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 300,
      "maxStakePerOracle": 100000,
      "minStakeAmt": 500,
      "totalAwardsToDistribute": 0,
    },
  ],
  "subscription": undefined,
  "userAward": Array [
    0,
    0,
  ],
  "userStake": Array [
    Object {},
    Object {},
  ],
}
`;

exports[`stake reducer default 1`] = `
Object {
  "addresses": Array [
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
  ],
  "allowance": Array [
    0,
    0,
  ],
  "contractDUO": Array [
    0,
    0,
  ],
  "duo": 0,
  "oracleStake": Array [
    Object {},
    Object {},
  ],
  "states": Array [
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 0,
      "maxStakePerOracle": 0,
      "minStakeAmt": 0,
      "totalAwardsToDistribute": 0,
    },
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 0,
      "maxStakePerOracle": 0,
      "minStakeAmt": 0,
      "totalAwardsToDistribute": 0,
    },
  ],
  "subscription": Array [
    0,
    0,
  ],
  "userAward": Array [
    0,
    0,
  ],
  "userStake": Array [
    Object {},
    Object {},
  ],
}
`;

exports[`stake reducer oracleStake 1`] = `
Object {
  "addresses": Array [
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
  ],
  "allowance": Array [
    1000,
    0,
  ],
  "contractDUO": Array [
    0,
    0,
  ],
  "duo": 1000,
  "oracleStake": Array [
    Object {},
    Object {},
  ],
  "states": Array [
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 0,
      "maxStakePerOracle": 0,
      "minStakeAmt": 0,
      "totalAwardsToDistribute": 0,
    },
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 300,
      "maxStakePerOracle": 100000,
      "minStakeAmt": 500,
      "totalAwardsToDistribute": 0,
    },
  ],
  "subscription": undefined,
  "userAward": Array [
    0,
    0,
  ],
  "userStake": Array [
    Object {},
    Object {},
  ],
}
`;

exports[`stake reducer stakeAddress 1`] = `
Object {
  "addresses": Array [
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
  ],
  "allowance": Array [
    0,
    0,
  ],
  "contractDUO": Array [
    0,
    0,
  ],
  "duo": 0,
  "oracleStake": Array [
    Object {},
    Object {},
  ],
  "states": Array [
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 0,
      "maxStakePerOracle": 0,
      "minStakeAmt": 0,
      "totalAwardsToDistribute": 0,
    },
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 300,
      "maxStakePerOracle": 100000,
      "minStakeAmt": 500,
      "totalAwardsToDistribute": 0,
    },
  ],
  "subscription": Array [
    0,
    0,
  ],
  "userAward": Array [
    0,
    0,
  ],
  "userStake": Array [
    Object {},
    Object {},
  ],
}
`;

exports[`stake reducer stakeAllowance 1`] = `
Object {
  "addresses": Array [
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
  ],
  "allowance": Array [
    1000,
    0,
  ],
  "contractDUO": Array [
    0,
    0,
  ],
  "duo": 1000,
  "oracleStake": Array [
    Object {},
    Object {},
  ],
  "states": Array [
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 0,
      "maxStakePerOracle": 0,
      "minStakeAmt": 0,
      "totalAwardsToDistribute": 0,
    },
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 300,
      "maxStakePerOracle": 100000,
      "minStakeAmt": 500,
      "totalAwardsToDistribute": 0,
    },
  ],
  "subscription": Array [
    0,
    0,
  ],
  "userAward": Array [
    0,
    0,
  ],
  "userStake": Array [
    Object {},
    Object {},
  ],
}
`;

exports[`stake reducer stakeBalance 1`] = `
Object {
  "addresses": Array [
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
  ],
  "allowance": Array [
    0,
    0,
  ],
  "contractDUO": Array [
    0,
    0,
  ],
  "duo": 1000,
  "oracleStake": Array [
    Object {},
    Object {},
  ],
  "states": Array [
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 0,
      "maxStakePerOracle": 0,
      "minStakeAmt": 0,
      "totalAwardsToDistribute": 0,
    },
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 300,
      "maxStakePerOracle": 100000,
      "minStakeAmt": 500,
      "totalAwardsToDistribute": 0,
    },
  ],
  "subscription": Array [
    0,
    0,
  ],
  "userAward": Array [
    0,
    0,
  ],
  "userStake": Array [
    Object {},
    Object {},
  ],
}
`;

exports[`stake reducer stakeStates 1`] = `
Object {
  "addresses": Array [
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
  ],
  "allowance": Array [
    0,
    0,
  ],
  "contractDUO": Array [
    0,
    0,
  ],
  "duo": 0,
  "oracleStake": Array [
    Object {},
    Object {},
  ],
  "states": Array [
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 0,
      "maxStakePerOracle": 0,
      "minStakeAmt": 0,
      "totalAwardsToDistribute": 0,
    },
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 300,
      "maxStakePerOracle": 100000,
      "minStakeAmt": 500,
      "totalAwardsToDistribute": 0,
    },
  ],
  "subscription": Array [
    0,
    0,
  ],
  "userAward": Array [
    0,
    0,
  ],
  "userStake": Array [
    Object {},
    Object {},
  ],
}
`;

exports[`stake reducer stakeSub Off 1`] = `
Object {
  "addresses": Array [
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
  ],
  "allowance": Array [
    1000,
    0,
  ],
  "contractDUO": Array [
    0,
    0,
  ],
  "duo": 1000,
  "oracleStake": Array [
    Object {},
    Object {},
  ],
  "states": Array [
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 0,
      "maxStakePerOracle": 0,
      "minStakeAmt": 0,
      "totalAwardsToDistribute": 0,
    },
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 300,
      "maxStakePerOracle": 100000,
      "minStakeAmt": 500,
      "totalAwardsToDistribute": 0,
    },
  ],
  "subscription": undefined,
  "userAward": Array [
    0,
    0,
  ],
  "userStake": Array [
    Object {},
    Object {},
  ],
}
`;

exports[`stake reducer stakeSub On 1`] = `
Object {
  "addresses": Array [
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
  ],
  "allowance": Array [
    1000,
    0,
  ],
  "contractDUO": Array [
    0,
    0,
  ],
  "duo": 1000,
  "oracleStake": Array [
    Object {},
    Object {},
  ],
  "states": Array [
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 0,
      "maxStakePerOracle": 0,
      "minStakeAmt": 0,
      "totalAwardsToDistribute": 0,
    },
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 300,
      "maxStakePerOracle": 100000,
      "minStakeAmt": 500,
      "totalAwardsToDistribute": 0,
    },
  ],
  "subscription": undefined,
  "userAward": Array [
    0,
    0,
  ],
  "userStake": Array [
    Object {},
    Object {},
  ],
}
`;

exports[`stake reducer userAward 1`] = `
Object {
  "addresses": Array [
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
  ],
  "allowance": Array [
    1000,
    0,
  ],
  "contractDUO": Array [
    0,
    0,
  ],
  "duo": 1000,
  "oracleStake": Array [
    Object {},
    Object {},
  ],
  "states": Array [
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 0,
      "maxStakePerOracle": 0,
      "minStakeAmt": 0,
      "totalAwardsToDistribute": 0,
    },
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 300,
      "maxStakePerOracle": 100000,
      "minStakeAmt": 500,
      "totalAwardsToDistribute": 0,
    },
  ],
  "subscription": undefined,
  "userAward": Array [
    0,
    0,
  ],
  "userStake": Array [
    Object {},
    Object {},
  ],
}
`;

exports[`stake reducer userStake 1`] = `
Object {
  "addresses": Array [
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
    Object {
      "operator": "0x0",
      "priceFeedList": Array [],
    },
  ],
  "allowance": Array [
    1000,
    0,
  ],
  "contractDUO": Array [
    0,
    0,
  ],
  "duo": 1000,
  "oracleStake": Array [
    Object {},
    Object {},
  ],
  "states": Array [
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 0,
      "maxStakePerOracle": 0,
      "minStakeAmt": 0,
      "totalAwardsToDistribute": 0,
    },
    Object {
      "canStake": false,
      "canUnstake": false,
      "lockMinTimeInSecond": 300,
      "maxStakePerOracle": 100000,
      "minStakeAmt": 500,
      "totalAwardsToDistribute": 0,
    },
  ],
  "subscription": undefined,
  "userAward": Array [
    0,
    0,
  ],
  "userStake": Array [
    Object {},
    Object {},
  ],
}
`;
